--- a/batch1/src/main/resources/application.properties
+++ b/batch1/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/batch_jobs
 spring.datasource.username=root
 spring.datasource.password=12345678
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.initialization-mode=always
+spring.datasource.schema=schema.sql
